# discord-bots

./: .gitignore  README.md  discord-bots.code-workspace  pyproject.toml
.github/workflows/: dockerhub-description.yml  master.yml
gha/: kotatsu.Dockerfile  report-manager.Dockerfile  smmo.Dockerfile  translate.Dockerfile
kotatsu-bot/: main.py
report-manager-bot/: .gitignore  main.py
smmo-bot/: main.py  morse_dict.json
translate-bot/: .gitignore  language_data.json  main.py
translate-bot/data/: wotd-list-fi-en.tsv
translate-bot/utils/: settings.py
