[tool.black]
line-length = 119

[tool.poetry]
name = "discord-bots"
version = "0.1.0"
description = "Python discord bots"
authors = ["Tim Klein Nijenhuis <tim@hetorus.nl>"]
license = "MIT"
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
discord-py = "^2.3.2"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
